Modify to work with new js

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Papers, Scissors</title>
 </head>
-<body>
-    <h1>Open your console</h1>
+<body> 
+    <div>
+    	<button>Rock</button>
+    	<button>Paper</button>
+    	<button>Scissors</button>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
